Register responsive fixed, login Dark mode done

--- a/views/css/login.css
+++ b/views/css/login.css
@@ -103,7 +103,6 @@ body{
     height: 75%;
     width: 95%;
     box-shadow: 5px 5px 15px 5px rgba(0,0,0,0.38);
-    background-color: rgb(255, 255, 255);
     overflow: visible;
 }
 .form-done{
